fix(_home.html.erb): make home page responsive on mobile devices

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,8 +41,16 @@ body {
   font-weight: 500 !important;
 }
 
-.bigger-size {
-  font-size: 4rem !important;
+.custom-responsive-size {
+  font-size: 3rem !important;
+  margin: 3rem 0 3rem 0;
+}
+
+@media (min-width: 600px) {
+  .custom-responsive-size {
+    font-size: 4rem !important;
+    margin: 6rem 0 3rem 0;
+  }
 }
 
 .has-background-custom {
